# motif

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Makefile  Procfile  Procfile.dev  Procfile.watch  README.md  RELEASING.md  dev-warp.sh  dev.sh  rust-toolchain.toml
.github/workflows/: flutter-checks.yml  motifd-image.yml  motifd-windows-checks.yml  pages.yml  push-relay-image.yml  release-desktop.yml  release-macos.yml  release-motifd.yml  rendezvous-image.yml  retag-image.yml  review-image.yml  version-check.yml
apps/flutter/: .gitignore  .metadata  ARCHITECTURE.md  MOTIF_FLUTTER_PLAN.md  PLAN.md  README.md  WORKSPACE_STATE_ARCHITECTURE.md  dart_test.yaml  devtools_options.yaml  ffigen.yaml  pubspec.yaml
apps/flutter/.amp/: settings.json
apps/flutter/android/: gradle.properties
apps/flutter/ghostty/: build.zig.zon  build.zig.zon.json  build.zig.zon.nix  build.zig.zon.txt
apps/flutter/ghostty/example/c-vt-cmake-cross/: CMakeLists.txt  README.md
apps/flutter/hook/: build.dart
apps/flutter/integration_test/: full_simulator_flow_test.dart  native_terminal_app_test.dart
apps/flutter/lib/: main.dart  main_desktop.dart
apps/flutter/linux/: CMakeLists.txt
apps/flutter/scripts/: build_libghostty.sh  build_motif_embed.sh  build_native_deps.sh  build_tailscale.sh  strip_macos_x64.sh
apps/flutter/test/: motif_embed_ffi_test.dart  widget_test.dart
apps/flutter/tool/: doubao_handshake_probe.dart  gen_tray_icons.py
apps/flutter/web/: ghostty_vt.js  index.html  manifest.json  wasmtest.html
apps/flutter/windows/: CMakeLists.txt
apps/ios/: Project.yml  Push-WIRING.md  README.md  buildServer.json
apps/ios/Motif/: ContentView.swift  Motif.entitlements  MotifApp.swift
apps/ios/MotifNotifyService/: Info.plist  MotifNotifyService.entitlements  NotificationService.swift
apps/ios/scripts/: sync-web.sh
apps/menubar/: Cargo.toml  bundle.sh  tauri.conf.json
apps/menubar/capabilities/: default.json
apps/menubar/src/: app_state.rs  commands.rs  config.rs  main.rs  tray.rs
apps/web/: index.html  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: main.tsx  shellIntegration.ts  styles.css
crates/motif-cast/: Cargo.toml
crates/motif-cast/src/: main.rs
crates/motif-client/: Cargo.toml
crates/motif-client/src/: client.rs  coordinator.rs  events.rs  focus.rs  http.rs  lib.rs  palette.rs  pty_ws.rs  raw_pty.rs  shell_integration.rs
crates/motif-client/src/transport/: mod.rs  ssh.rs
crates/motif-embed/: Cargo.toml
crates/motif-embed/src/: config.rs  lib.rs
crates/motif-net/: Cargo.toml
crates/motif-net/src/: config.rs  dialer.rs  lib.rs  listener.rs  stream.rs
crates/motif-net/tests/: rzv_backend.rs  rzv_tls.rs
crates/motif-net/tests/common/: mod.rs
crates/motif-proto/: Cargo.toml
crates/motif-proto/src/: common.rs  device.rs  envelope.rs  error.rs  event.rs  fs.rs  git.rs  lib.rs  ping.rs  pty.rs  remote_port.rs  session.rs  terminal_query.rs  view.rs  wire.rs
crates/motif-push-relay/: Cargo.toml  README.md
crates/motif-push-relay/src/: main.rs
crates/motif-rendezvous/: Cargo.toml
crates/motif-rendezvous/src/: lib.rs  main.rs
crates/motif-server/: Cargo.toml  build.rs
crates/motif-server/assets/shell/: bash-preexec.sh  bash.sh  fish.fish  motif-notify.ps1  motif-notify.sh  powershell.ps1  zsh.zsh
crates/motif-server/src/: auth.rs  blob.rs  config.rs  conn_registry.rs  devices.rs  embed.rs  events_ws.rs  fs.rs  fswatch.rs  git.rs  hook_ingress.rs  http_rpc.rs  lib.rs  main.rs  paths.rs  pty.rs  pty_ws.rs  relay.rs  rpc.rs  rpc_log.rs  rzv.rs  tcp_ws.rs  wake_detector.rs  windows_job.rs  wire.rs  ws.rs
crates/motif-server/src/session/: manager.rs  mod.rs
crates/motif-server/src/shell/: block_store.rs  bootstrap.rs  mod.rs  state.rs
crates/motif-server/tests/: cors.rs  cwd_tracking.rs  embed_lifecycle.rs  protocol.rs  pty_query_answer.rs  pty_query_filter.rs  shell_integration.rs  validate-powershell-bootstrap.ps1
crates/motif-server/tests/common/: mod.rs
crates/motif-tailscale/: Cargo.toml
crates/motif-tailscale/src/: bundled.rs  lib.rs  stub.rs
crates/motif-tui/: Cargo.toml
crates/motif-tui/src/: client.rs  lib.rs  main.rs  palette.rs  picker.rs  pty_view.rs  ui.rs
crates/motif-tui/src/transport/: ssh.rs
crates/motif-web/: Cargo.toml  build.rs
crates/motif-web/src/: bridge.rs  config.rs  embed.rs  http.rs  lib.rs  main.rs
crates/motif-web/static/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
crates/motif-web/static/assets/: DiffTab.js  FilePreviewTab.js  ImageTab.js  MobileInputDock.js  PtyTab.js  diff.css  diff.js  hljs.css  hljs.js  index.css  index.js  react.js  xterm.css  xterm.js
deploy/motifd/: Dockerfile  README.md  entrypoint.sh
deploy/push-relay/: Dockerfile  README.md
deploy/rendezvous/: Dockerfile  README.md  smoke.py
deploy/review/: Dockerfile  README.md  entrypoint.sh  run-review.sh
docs/: blob-transfer.md  flutter-pty-restore-performance.md  macos-github-release.md  managed-enroll.md  prd.md  privacy.html  review-server.md  rpc.md  rzv-protocol.md  shell-integration.md  ssh-tunnel.md  tailscale.md  usage.md  web-client.md  windows-wsl.md
docs/site/: DESIGN.md  app.js  index.html  styles.css
ios/: Project.yml  README.md  buildServer.json
ios/Motif/: ContentView.swift  Info.plist  MotifApp.swift
ios/Motif/ASR/: AsrSession.swift  AudioCapture.swift  Constants.swift  DeviceRegistry.swift  DoubaoASR.swift  Keychain.swift  OpusEncoder.swift  WaveClient.swift
ios/Motif/Native/: BottomInputBar.swift  ChangeDirectoryPanel.swift  FileLog.swift  FileTreePanel.swift  GitDiffPanel.swift  MotifClient.swift  MotifProto.swift  NativeRoot.swift  PtyView.swift  QuickCommandEditor.swift  RpcClient.swift  (+2 more)
ios/MotifTests/: ChaCha20Tests.swift  OpusEncoderTests.swift  TailscaleProxyTests.swift  WaveClientTests.swift
ios/scripts/: build-opus.sh  build-tailscale.sh  gen-icon.swift  gen-proto.sh  sync-web.sh
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  appearance.ts  main.tsx  styles.css  types.d.ts
(+689 files in other folders)
