[workspace]
members  = ["crates/*", "apps/*"]
# apps/flutter is a Flutter project, not a Cargo package; exclude it from the
# workspace glob while still letting motif-server embed its web build output.
exclude  = ["apps/flutter"]
resolver = "2"

[workspace.package]
edition      = "2021"
rust-version = "1.78"
version      = "0.1.0"
license      = "MIT OR Apache-2.0"
authors      = ["Motif contributors"]

[workspace.dependencies]
# Async runtime / IO
tokio              = { version = "1.52", features = ["full"] }
# WS over caller-supplied plaintext streams (tailnet / loopback / proxied TLS).
# motifd never terminates TLS itself, so no rustls/native-tls connector here —
# that also keeps aws-lc-sys out of the build (its asm trips the macOS linker).
tokio-tungstenite  = { version = "0.29", default-features = false, features = ["handshake"] }
axum               = { version = "0.8", features = ["ws"] }
tower-http         = { version = "0.6", features = ["cors"] }
tokio-util         = "0.7"
webpki-roots       = "1"

# Streams / pinning
futures-util       = "0.3"
pin-project-lite   = "0.2"

# Serialization
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
serde_bytes        = "0.11"
rmp-serde          = "1.3"
rmpv               = { version = "1.3", features = ["with-serde"] }
bytes              = "1"
base64             = "0.22"
flate2             = "1"
# Phase-2 HTTP transport. hyper 1.x is already in the dep tree
# (axum 0.8 uses it); declaring it as a workspace dep lets
# motif-client open per-request HTTP connections over arbitrary
# AsyncRead+AsyncWrite streams (plain TCP, tsnet).
hyper              = { version = "1", features = ["client", "http1"] }
hyper-util         = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http               = "1"
http-body-util     = "0.1"
# Outbound HTTPS to the push relay (motifd → relay). Pinned to the `ring`
# crypto provider, NOT aws-lc-rs (rustls 0.23's default) — aws-lc-sys's asm
# trips the macOS linker, which is why the workspace keeps it out (see the
# tokio-tungstenite note above).
hyper-rustls       = { version = "0.27", default-features = false, features = ["ring", "webpki-roots", "http1", "tls12"] }
aes-gcm            = "0.10"

# CLI / config
clap               = { version = "4", features = ["derive", "env"] }
url                = "2"

# Concurrency primitives
dashmap            = "6"
parking_lot        = "0.12"

# Low-level FFI (used by motif-tui for termios palette probing)
libc               = "0.2"

# Hashing / IDs
sha2               = "0.11"
hex                = "0.4"
ulid               = { version = "1", features = ["serde"] }
getrandom          = "0.2"
dirs               = "6"
# Terminal QR for rzv pairing (`motif://pair`). default-features off to skip
# the image/svg renderers — we only use the unicode half-block renderer.
qrcode             = { version = "0.14", default-features = false }

# rzv end-to-end TLS over the relayed pipe. All pinned to the `ring` provider
# (NOT aws-lc-rs) to match hyper-rustls and keep aws-lc-sys out of the build.
rustls             = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls       = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
# Self-signed identity cert for motifd; ring crypto, no aws-lc.
rcgen              = { version = "0.13", default-features = false, features = ["ring", "pem"] }

# Errors / logging
thiserror          = "2"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
time               = { version = "0.3", features = ["macros", "formatting", "local-offset"] }

# PTY / TUI / file ops (M2-M5)
portable-pty       = "0.9"
walkdir            = "2"
mime_guess         = "2"
which              = "8"
ratatui            = "0.30"
crossterm          = "0.29"
vt100              = "0.16"
tui-term           = "0.3"
# Headless VT engine (same libghostty the iOS client renders with) for
# server-side screen+scrollback VT snapshots on PTY replay. Builds
# libghostty-vt from source via Zig 0.15.2 — see the zig-ghostty-build-tahoe
# memory for local macOS (Tahoe) builds; Linux uses zig 0.15.x natively.
#
# Pinned to our fork of uzaaft/libghostty-rs at master HEAD instead of the
# crates.io 0.1.1 release: the published crate is frozen at a March-2026
# snapshot whose bundled ghostty predates the PageList column-reflow fixes
# (ghostty #10297 / #10337), so shrinking a PTY's columns with large
# scrollback aborts the process. This rev's build.rs pins ghostty bfe633a9.
libghostty-vt      = { git = "https://github.com/Uzaaft/libghostty-rs", rev = "20edad15d7984c727acc4f4facdadf045609f543" }
libghostty-vt-sys  = { git = "https://github.com/Uzaaft/libghostty-rs", rev = "20edad15d7984c727acc4f4facdadf045609f543" }
notify             = "8"
notify-debouncer-full = "0.7"

# M8 (Web) + M9 (Shell integration)
rust-embed         = "8"
tempfile           = "3"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
