[package]
name        = "motif-menubar"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description = "Motif menu-bar app — runs an embedded motifd and controls it from the tray"

[[bin]]
name = "motif-menubar"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
motif-server = { path = "../../crates/motif-server" }

tauri              = { version = "2", features = ["tray-icon"] }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
dirs               = { workspace = true }
