[package]
name        = "motif-client"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description = "Motif RPC client + raw-PTY pump shared by motif-tui and motif-cast"

[dependencies]
motif-proto        = { path = "../motif-proto" }
motif-net          = { path = "../motif-net" }

tokio              = { workspace = true }
tokio-tungstenite  = { workspace = true }

futures-util       = { workspace = true }

serde              = { workspace = true }
serde_json         = { workspace = true }
base64             = { workspace = true }

url                = { workspace = true }
crossterm          = { workspace = true }

anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }

which              = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc               = { workspace = true }

[features]
default   = []
# Pulls embedded-Tailscale support through motif-net.  Activates the
# `--via tailscale://hostname[:port]` branch in `transport::connect`.
tailscale = ["motif-net/tailscale"]
