[package]
name        = "motif-client"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description = "Motif RPC client + raw-PTY pump shared by motif-tui and motif-cast"

[dependencies]
motif-proto        = { path = "../motif-proto" }
motif-net          = { path = "../motif-net" }

tokio              = { workspace = true }
tokio-tungstenite  = { workspace = true }

futures-util       = { workspace = true }

serde              = { workspace = true }
serde_json         = { workspace = true }
base64             = { workspace = true }

url                = { workspace = true }
crossterm          = { workspace = true }

anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }

which              = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc               = { workspace = true }

[features]
default   = []
# `tailscale`: stub mode (compiles without Go; runtime calls error out).
# Useful for CI / non-bundled clients that proxy through SSH.
tailscale         = ["motif-net/tailscale"]
# `tailscale-bundled`: real embedded tsnet (links libtailscale via
# motif-tailscale/bundled). Enables `--via tailscale://...` end-to-end
# and the LocalAPI-driven discovery path in motif-tui.
tailscale-bundled = ["tailscale", "motif-net/tailscale-bundled"]
