[package]
name        = "motif-embed"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description = "Motif embeddable server — a C ABI over motif-server for in-process hosts (the Flutter desktop app)"

[lib]
# cdylib: the dynamic library Flutter loads over dart:ffi.
# rlib:   lets `cargo test` link the unit tests against the same crate.
crate-type = ["cdylib", "rlib"]

[features]
# Passthrough of motif-server's tailscale features. Default keeps the embedded
# tsnet (Go libtailscale); `--no-default-features` builds a desktop host with no
# Tailscale at all. The status surface in src/lib.rs is `#[cfg]`-gated to match.
default            = ["tailscale-bundled"]
tailscale          = ["motif-server/tailscale"]
tailscale-bundled  = ["tailscale", "motif-server/tailscale-bundled"]

[dependencies]
# default-features = false so this crate's own feature flags decide whether
# motif-tailscale gets linked.
motif-server = { path = "../motif-server", default-features = false }

tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
dirs       = { workspace = true }
