[package]
name        = "motif-embed"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description = "Motif embeddable server — a C ABI over motif-server for in-process hosts (the Flutter desktop app)"

[lib]
# cdylib: the dynamic library Flutter loads over dart:ffi.
# rlib:   lets `cargo test` link the unit tests against the same crate.
crate-type = ["cdylib", "rlib"]

[features]
# Passthrough of motif-server's tailscale features. Default keeps the embedded
# tsnet (Go libtailscale); `--no-default-features` builds a desktop host with no
# Tailscale at all. The status surface in src/lib.rs is `#[cfg]`-gated to match.
default            = ["tailscale-bundled"]
# `motif-net` is pulled in (stub mode is enough) so we can name its
# `motif_tailscale::{extract_auth_url, host_of}` helpers for the log-ring scrape.
tailscale          = ["motif-server/tailscale", "dep:motif-net", "motif-net/tailscale"]
tailscale-bundled  = ["tailscale", "motif-server/tailscale-bundled"]
# Build-time-only feature for the Flutter macOS native-asset prebuild. It keeps
# motifd's normal release builds static, while letting libmotif_embed.dylib link
# against the already-arch-specific bundled libghostty-vt.dylib.
ghostty-dynamic    = [
  "dep:libghostty-vt",
  "libghostty-vt/link-dynamic",
  "dep:libghostty-vt-sys",
  "libghostty-vt-sys/pkg-config",
]

[dependencies]
# default-features = false so this crate's own feature flags decide whether
# motif-tailscale gets linked.
motif-server = { path = "../motif-server", default-features = false }
# Optional, tailscale-only: the auth-URL scraper helpers live at the
# motif-tailscale crate root, re-exported via motif-net.
motif-net = { path = "../motif-net", optional = true, default-features = false }
# Optional feature-forwarding deps used only by `ghostty-dynamic`.
libghostty-vt = { workspace = true, optional = true }
libghostty-vt-sys = { workspace = true, optional = true }

tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
dirs       = { workspace = true }
url        = { workspace = true }
