[package]
name        = "motif-net"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description = "Motif transport abstraction (plain TCP today, embedded Tailscale tomorrow) shared by motifd and the client crates"

[features]
default   = []
# `tailscale`: pulls motif-tailscale in stub mode (no Go toolchain
# needed). Calls return TsError::Unimplemented at runtime.
tailscale          = ["dep:motif-tailscale"]
# `tailscale-bundled`: also turns on motif-tailscale/bundled, which links
# a Go-built libtailscale via libtailscale-sys. Requires Go on the build
# machine. Use this for motifd; clients usually want plain `tailscale`.
tailscale-bundled  = ["tailscale", "motif-tailscale/bundled"]

[dependencies]
tokio              = { workspace = true }
axum               = { workspace = true }
pin-project-lite   = { workspace = true }
url                = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }

motif-tailscale    = { path = "../motif-tailscale", optional = true, default-features = false }
