[package]
name        = "motif-proto"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description = "Motif remote dev agent — JSON-RPC protocol types"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_bytes = { workspace = true }
rmp-serde   = { workspace = true }
base64      = { workspace = true }
thiserror   = { workspace = true }
ulid        = { workspace = true }
bytes       = { workspace = true }
