[package]
name        = "motif-push-relay"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description = "Motif APNs push relay — holds the APNs .p8, forwards encrypted payloads from motifd to Apple."

[[bin]]
name = "motif-push-relay"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
axum               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
clap               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot        = { workspace = true }
bytes              = { workspace = true }
http               = { workspace = true }
http-body-util     = { workspace = true }

# APNs requires HTTP/2; add the http2 feature on top of the workspace deps.
# Same ring-based TLS as motifd (no aws-lc-sys).
hyper        = { workspace = true, features = ["http2"] }
hyper-util   = { workspace = true, features = ["http2"] }
hyper-rustls = { workspace = true, features = ["http2"] }

# ES256 JWT signing for the APNs provider token. jsonwebtoken uses `ring`.
jsonwebtoken = "9"
