[package]
name        = "motif-rendezvous"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description = "Motif rendezvous relay — JWT-authenticated WebSocket pairing with per-user bandwidth limits."

[[bin]]
name = "motif-rendezvous"
path = "src/main.rs"

[lib]
name = "motif_rendezvous"
path = "src/lib.rs"

[dependencies]
tokio              = { workspace = true }
clap               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot        = { workspace = true }
axum               = { workspace = true }
futures-util       = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
bytes              = { workspace = true }
jsonwebtoken       = "9"

[dev-dependencies]
tokio              = { workspace = true, features = ["full", "test-util"] }
