[package]
name        = "motif-server"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description = "Motif remote dev agent — core server library + motifd binary"

[[bin]]
name = "motifd"
path = "src/main.rs"

[dependencies]
motif-proto        = { path = "../motif-proto" }
motif-net          = { path = "../motif-net", features = ["tailscale-bundled"] }

tokio              = { workspace = true }
tokio-util         = { workspace = true }
tokio-tungstenite  = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }

futures-util       = { workspace = true }

# Outbound HTTPS to the push relay + per-device payload encryption.
hyper              = { workspace = true }
hyper-util         = { workspace = true }
hyper-rustls       = { workspace = true }
http               = { workspace = true }
http-body-util     = { workspace = true }
aes-gcm            = { workspace = true }

serde              = { workspace = true }
serde_json         = { workspace = true }
rmp-serde          = { workspace = true }
rmpv               = { workspace = true }
bytes              = { workspace = true }
base64             = { workspace = true }

dashmap            = { workspace = true }
parking_lot        = { workspace = true }
portable-pty       = { workspace = true }
libghostty-vt      = { workspace = true }
walkdir            = { workspace = true }
mime_guess         = { workspace = true }
notify             = { workspace = true }
notify-debouncer-full = { workspace = true }

sha2               = { workspace = true }
hex                = { workspace = true }
ulid               = { workspace = true }
getrandom          = { workspace = true }

clap               = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
time               = { workspace = true }

# Shell integration: bootstrap scripts embedded at compile time + per-PTY
# tmpdir for the live rcfile copy.
rust-embed         = { workspace = true }
tempfile           = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
motif-proto = { path = "../motif-proto" }
tokio       = { workspace = true }
ulid        = { workspace = true }
tempfile          = { workspace = true }
tokio-tungstenite = { workspace = true }
hyper             = { workspace = true }
hyper-util        = { workspace = true }
http              = { workspace = true }
http-body-util    = { workspace = true }
bytes             = { workspace = true }
base64            = { workspace = true }
serde_json        = { workspace = true }
futures-util      = { workspace = true }
anyhow            = { workspace = true }
