[package]
name        = "motif-server"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description = "Motif remote dev agent — core server library + motifd binary"

[[bin]]
name = "motifd"
path = "src/main.rs"

[features]
# Tailscale is opt-out. `default` keeps the historical behaviour (motifd ships
# with the real embedded tsnet), but a build that doesn't want it — or can't
# provide a Go toolchain (e.g. the hardened review image) — uses
# `--no-default-features` and pulls in NO motif-tailscale at all.
#   tailscale          : compile the tsnet transport + status API (stub, no Go).
#   tailscale-bundled  : link the real Go libtailscale (needs Go on the builder).
# All tailscale-touching code in motif-server is `#[cfg(feature = "tailscale")]`.
default            = ["tailscale-bundled"]
tailscale          = ["motif-net/tailscale"]
tailscale-bundled  = ["tailscale", "motif-net/tailscale-bundled"]

[dependencies]
motif-proto        = { path = "../motif-proto" }
# Transport. Tailscale support is layered on via this crate's own features
# above (motif-net/tailscale[-bundled]); the base dep stays feature-free so a
# default-features-off build links no motif-tailscale.
motif-net          = { path = "../motif-net" }

tokio              = { workspace = true }
tokio-util         = { workspace = true }
tokio-tungstenite  = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }

futures-util       = { workspace = true }

# Outbound HTTPS to the push relay + per-device payload encryption.
hyper              = { workspace = true }
hyper-util         = { workspace = true }
hyper-rustls       = { workspace = true }
http               = { workspace = true }
http-body-util     = { workspace = true }
aes-gcm            = { workspace = true }

serde              = { workspace = true }
serde_json         = { workspace = true }
rmp-serde          = { workspace = true }
rmpv               = { workspace = true }
bytes              = { workspace = true }
base64             = { workspace = true }
flate2             = { workspace = true }
qrcode             = { workspace = true }
rustls             = { workspace = true }
rcgen              = { workspace = true }

dashmap            = { workspace = true }
parking_lot        = { workspace = true }
portable-pty       = { workspace = true }
walkdir            = { workspace = true }
mime_guess         = { workspace = true }
notify             = { workspace = true }
notify-debouncer-full = { workspace = true }

sha2               = { workspace = true }
hex                = { workspace = true }
ulid               = { workspace = true }
getrandom          = { workspace = true }

# Enumerate local NIC addresses to advertise the LAN-direct port over /ping.
if-addrs           = "0.13"

clap               = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
time               = { workspace = true }
dirs               = { workspace = true }

# Shell integration: bootstrap scripts embedded at compile time + per-PTY
# tmpdir for the live rcfile copy.
rust-embed         = { workspace = true }
tempfile           = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
libghostty-vt = { workspace = true }

[target.'cfg(windows)'.dependencies]
libghostty-vt = { workspace = true, features = ["link-dynamic"] }
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }

[dev-dependencies]
motif-proto = { path = "../motif-proto" }
tokio       = { workspace = true }
ulid        = { workspace = true }
tempfile          = { workspace = true }
tokio-tungstenite = { workspace = true }
hyper             = { workspace = true }
hyper-util        = { workspace = true }
http              = { workspace = true }
http-body-util    = { workspace = true }
bytes             = { workspace = true }
base64            = { workspace = true }
serde_json        = { workspace = true }
futures-util      = { workspace = true }
anyhow            = { workspace = true }
