[package]
name        = "motif-tailscale"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description = "Motif — embedded Tailscale (libtailscale) wrapper for clients and motifd"

[features]
# `bundled`: link `libtailscale` (built from Go via the libtailscale-sys
# crate's build.rs). Requires Go 1.20+ on the build machine.  When this
# feature is OFF, all runtime calls return `TsError::Unimplemented` — the
# crate compiles on machines without Go and downstream code doesn't have
# to conditionally type-erase.
default  = []
bundled  = ["dep:libtailscale", "dep:serde", "dep:serde_json", "dep:base64"]
# `prebuilt`: planned for v2 (download a precompiled .tar.gz from the
# upstream release matching `vendor/libtailscale/VERSION`). Not wired.
prebuilt = []

[dependencies]
thiserror    = { workspace = true }
tracing      = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true, optional = true }
serde_json   = { workspace = true, optional = true }
base64       = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc         = { workspace = true }
libtailscale = { version = "0.2", optional = true }
