[package]
name        = "motif-tui"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description = "Motif remote dev agent — TUI client library + motif-tui binary"

[[bin]]
name = "motif-tui"
path = "src/main.rs"

[dependencies]
motif-proto        = { path = "../motif-proto" }

tokio              = { workspace = true }
tokio-tungstenite  = { workspace = true }

futures-util       = { workspace = true }

serde              = { workspace = true }
serde_json         = { workspace = true }
bytes              = { workspace = true }
base64             = { workspace = true }

url                = { workspace = true }

ratatui            = { workspace = true }
crossterm          = { workspace = true }
vt100              = { workspace = true }
tui-term           = { workspace = true }

clap               = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

which              = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc               = { workspace = true }

motif-tailscale    = { path = "../motif-tailscale", optional = true, default-features = false, features = ["stub"] }

[features]
default   = []
tailscale = ["dep:motif-tailscale"]
